remove phases
